--- a/LabProject/src/telas/telaDemandas.form
+++ b/LabProject/src/telas/telaDemandas.form
@@ -143,7 +143,8 @@
             <Component class="javax.swing.JTable" name="tblDemandas">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="4" rowCount="4">
+                  <Table columnCount="5" rowCount="4">
+                    <Column editable="true" title="ID" type="java.lang.Integer"/>
                     <Column editable="true" title="Procedimento" type="java.lang.String"/>
                     <Column editable="true" title="Tipo" type="java.lang.String"/>
                     <Column editable="true" title="Data" type="java.lang.String"/>
@@ -153,6 +154,11 @@
                 <Property name="autoResizeMode" type="int" value="4"/>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
