--- a/LabProject/src/telas/telaAgendarVacina.form
+++ b/LabProject/src/telas/telaAgendarVacina.form
@@ -115,7 +115,7 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
-                <StringItem index="0" value="Seleciona a dose..."/>
+                <StringItem index="0" value="Selecione a dose..."/>
                 <StringItem index="1" value="1&#xaa; Dose"/>
                 <StringItem index="2" value="2&#xaa; Dose"/>
                 <StringItem index="3" value="Dose de refor&#xe7;o"/>
