--- a/LabProject/src/telas/telaRealizarExame.form
+++ b/LabProject/src/telas/telaRealizarExame.form
@@ -118,7 +118,7 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="7" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lblConvenio" min="-2" max="-2" attributes="0"/>
@@ -132,7 +132,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="lblTipoSanguineo" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txtTipoSanguineo" pref="0" max="32767" attributes="0"/>
+                              <Component id="txtTipoSanguineo" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lblEmail" min="-2" max="-2" attributes="0"/>
@@ -304,7 +304,7 @@
                           <Component id="lblPatologia" min="-2" max="-2" attributes="0"/>
                           <Component id="txtPatologia" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="14" max="32767" attributes="0"/>
+                      <EmptySpace pref="10" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
