--- a/LabProject/src/telas/telaAdmin.form
+++ b/LabProject/src/telas/telaAdmin.form
@@ -54,7 +54,7 @@
     <Component class="javax.swing.JButton" name="btnCadastroExame">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/iconExame.png"/>
+          <Image iconType="3" name="/imagens/iconExameG.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="    Cadastrar Exame"/>
       </Properties>
@@ -70,7 +70,7 @@
     <Component class="javax.swing.JButton" name="btnEstoqueVacinas">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/iconVacina.png"/>
+          <Image iconType="3" name="/imagens/iconVacinaG.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Estoque de Vacinas"/>
       </Properties>
