--- a/LabProject/src/telas/telaAgendamento.form
+++ b/LabProject/src/telas/telaAgendamento.form
@@ -136,6 +136,9 @@
               <Font name="Segoe UI" size="15" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPacienteActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="30" y="130" width="240" height="40"/>
@@ -275,13 +278,10 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="iconSexoPaciente2">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="IconSexo"/>
-          </Properties>
+        <Component class="javax.swing.JLabel" name="iconSexoPaciente">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="280" y="140" width="-1" height="20"/>
+              <AbsoluteConstraints x="290" y="110" width="70" height="70"/>
             </Constraint>
           </Constraints>
         </Component>
