--- a/LabProject/src/telas/telaEditarPaciente.form
+++ b/LabProject/src/telas/telaEditarPaciente.form
@@ -160,6 +160,9 @@
         </Component>
         <Component class="javax.swing.JRadioButton" name="rdbFeminino">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="be" green="c5" red="f8" type="rgb"/>
+            </Property>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="groupSexo"/>
             </Property>
@@ -179,6 +182,9 @@
         </Component>
         <Component class="javax.swing.JRadioButton" name="rdbMasculino">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="be" green="c5" red="f8" type="rgb"/>
+            </Property>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="groupSexo"/>
             </Property>
@@ -311,7 +317,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="60" y="360" width="126" height="42"/>
+              <AbsoluteConstraints x="60" y="370" width="126" height="42"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -323,7 +329,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="360" y="120" width="-1" height="-1"/>
+              <AbsoluteConstraints x="440" y="160" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
